# last_operations

./: README.md  pyproject.toml
src/: main.py
src/utils/: functions.py
tests/: conftest.py  test_functions.py
